--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <!--для масштабируемых моделей-->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <!--для немасштабируемых моделей-->
-    <meta name="viewport" content="width=1366">
-    <!--для ссылок с мобильными телефонами-->
     <meta name="format-detection" content="telephone=no">
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -21,8 +17,86 @@
 
 <!-- start header.html-->
 <!-- open .header-->
-<header>
-
+<header class="header">
+    <div class="container">
+        <div class="header__top">
+            <div class="header__top__location">
+                <img src="img/icons/location.png" alt="">
+                <p>Москва, Советский пер., 10 стр. 5</p>
+            </div>
+            <div class="header__top__timework">
+                <img src="img/icons/time.png" alt="">
+                <p>Пн-Пт: 8:00-20:00</p>
+            </div>
+            <div class="header__top__nav">
+                <ul>
+                    <li><a href="#">Доставка и оплата</a></li>
+                    <li>/</li>
+                    <li><a href="#">ремонт</a></li>
+                    <li>/</li>
+                    <li><a href="#">отзывы</a></li>
+                    <li>/</li>
+                    <li><a href="#">контакты</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="header__middle">
+            <div class="header__middle__logo"><img src="img/logo.png" alt=""></div>
+            <div class="header__middle__search">
+                <form>
+                    <input type="text" placeholder="Поиск по товарам">
+                    <span><img src="img/icons/zoom.png" alt=""></span>
+                </form>
+            </div>
+            <div class="header__middle__callback">
+                <p>+7 757 287 78 78</p>
+                <p>+8 835 698 78 85</p>
+                <a class="btn-orange" href="#">обратный звонок</a>
+            </div>
+        </div>
+        <div class="header__bottom">
+            <div class="header__bottom__nav">
+                <ul class="dropdown">
+                    <li class="drop"><a class="border" href="#">все категории<span></span><span></span></a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Category-1</a></li>
+                            <li><a href="#">Category-2</a></li>
+                            <li><a href="#">Category-3</a></li>
+                            <li><a href="#">Category-4</a></li>
+                            <li><a href="#">Category-5</a></li>
+                        </ul>
+                    </li>
+                    <li class="drop"><a class="border" href="#">акции<span></span><span></span></a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Category-1</a></li>
+                            <li><a href="#">Category-2</a></li>
+                            <li><a href="#">Category-3</a></li>
+                            <li><a href="#">Category-4</a></li>
+                            <li><a href="#">Category-5</a></li>
+                        </ul>
+                    </li>
+                    <li class="drop"><a class="border" href="#">новинки<span></span><span></span></a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Category-1</a></li>
+                            <li><a href="#">Category-2</a></li>
+                            <li><a href="#">Category-3</a></li>
+                            <li><a href="#">Category-4</a></li>
+                            <li><a href="#">Category-5</a></li>
+                        </ul>
+                    </li>
+                    <li class="drop"><a class="border" href="#">популярное<span></span><span></span></a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Category-1</a></li>
+                            <li><a href="#">Category-2</a></li>
+                            <li><a href="#">Category-3</a></li>
+                            <li><a href="#">Category-4</a></li>
+                            <li><a href="#">Category-5</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </header>
 <!-- close .header -->
 
@@ -49,11 +123,10 @@
 <!-- end footer.html-->
 
 <!-- start html_close.html-->
-</body>
 <script src='js/jquery-2.1.3.min.js' type="text/javascript"></script>
-<!--для подключения Yandex-карт-->
-<script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
-
+<script src='js/jquery-ui.min.js' type="text/javascript"></script>
+<script src="js/owl.carousel.min.js" type="text/javascript"></script>
 <script src="js/script.min.js" type="text/javascript"></script>
+</body>
 </html>
 <!-- end html_close.html-->
