--- a/app/html/header.html
+++ b/app/html/header.html
@@ -39,8 +39,11 @@
         <div class="header__bottom">
             <div class="header__bottom__nav">
                 <ul class="dropdown">
-                    <li class="drop"><a class="border" href="#">все категории<span></span><span></span></a>
-                        <ul class="sub_menu">
+                    <li class="drop">
+                        <a class="border" href="#">все категории
+                            <span></span><span></span>
+                        </a>
+                        <ul class="sub-menu">
                             <li><a href="#">Category-1</a></li>
                             <li><a href="#">Category-2</a></li>
                             <li><a href="#">Category-3</a></li>
@@ -48,8 +51,11 @@
                             <li><a href="#">Category-5</a></li>
                         </ul>
                     </li>
-                    <li class="drop"><a class="border" href="#">акции<span></span><span></span></a>
-                        <ul class="sub_menu">
+                    <li class="drop">
+                        <a class="border" href="#">акции
+                            <span></span><span></span>
+                        </a>
+                        <ul class="sub-menu">
                             <li><a href="#">Category-1</a></li>
                             <li><a href="#">Category-2</a></li>
                             <li><a href="#">Category-3</a></li>
@@ -57,8 +63,11 @@
                             <li><a href="#">Category-5</a></li>
                         </ul>
                     </li>
-                    <li class="drop"><a class="border" href="#">новинки<span></span><span></span></a>
-                        <ul class="sub_menu">
+                    <li class="drop">
+                        <a class="border" href="#">новинки
+                            <span></span><span></span>
+                        </a>
+                        <ul class="sub-menu">
                             <li><a href="#">Category-1</a></li>
                             <li><a href="#">Category-2</a></li>
                             <li><a href="#">Category-3</a></li>
@@ -66,8 +75,11 @@
                             <li><a href="#">Category-5</a></li>
                         </ul>
                     </li>
-                    <li class="drop"><a class="border" href="#">популярное<span></span><span></span></a>
-                        <ul class="sub_menu">
+                    <li class="drop">
+                        <a class="border" href="#">популярное
+                            <span></span><span></span>
+                        </a>
+                        <ul class="sub-menu">
                             <li><a href="#">Category-1</a></li>
                             <li><a href="#">Category-2</a></li>
                             <li><a href="#">Category-3</a></li>
