--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
         <div class="header__bottom">
             <div class="header__bottom__nav">
                 <ul class="dropdown">
-                    <li class="drop"><a class="border" href="#">все категории<span></span><span></span></a>
-                        <ul class="sub_menu">
+                    <li class="drop">
+                        <a class="border" href="#">все категории
+                            <span></span><span></span>
+                        </a>
+                        <ul class="sub-menu">
                             <li><a href="#">Category-1</a></li>
                             <li><a href="#">Category-2</a></li>
                             <li><a href="#">Category-3</a></li>
@@ -66,8 +69,11 @@
                             <li><a href="#">Category-5</a></li>
                         </ul>
                     </li>
-                    <li class="drop"><a class="border" href="#">акции<span></span><span></span></a>
-                        <ul class="sub_menu">
+                    <li class="drop">
+                        <a class="border" href="#">акции
+                            <span></span><span></span>
+                        </a>
+                        <ul class="sub-menu">
                             <li><a href="#">Category-1</a></li>
                             <li><a href="#">Category-2</a></li>
                             <li><a href="#">Category-3</a></li>
@@ -75,8 +81,11 @@
                             <li><a href="#">Category-5</a></li>
                         </ul>
                     </li>
-                    <li class="drop"><a class="border" href="#">новинки<span></span><span></span></a>
-                        <ul class="sub_menu">
+                    <li class="drop">
+                        <a class="border" href="#">новинки
+                            <span></span><span></span>
+                        </a>
+                        <ul class="sub-menu">
                             <li><a href="#">Category-1</a></li>
                             <li><a href="#">Category-2</a></li>
                             <li><a href="#">Category-3</a></li>
@@ -84,8 +93,11 @@
                             <li><a href="#">Category-5</a></li>
                         </ul>
                     </li>
-                    <li class="drop"><a class="border" href="#">популярное<span></span><span></span></a>
-                        <ul class="sub_menu">
+                    <li class="drop">
+                        <a class="border" href="#">популярное
+                            <span></span><span></span>
+                        </a>
+                        <ul class="sub-menu">
                             <li><a href="#">Category-1</a></li>
                             <li><a href="#">Category-2</a></li>
                             <li><a href="#">Category-3</a></li>
