add fix for home head

--- a/app/html/pages/home.html
+++ b/app/html/pages/home.html
@@ -4,7 +4,7 @@
 
 <!-- main container-->
 
-<!-- @@include ../home.html -->
+<!-- @@include ../home-head.html -->
 
 <!-- @@include ../content.html -->
 
