--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -4,7 +4,7 @@
 
 <!-- main container-->
 
-<!-- @@include ../home.html -->
+<!-- @@include ../home-head.html -->
 
 <!-- @@include ../content.html -->
 
