--- a/home.html
+++ b/home.html
@@ -116,24 +116,24 @@
 
 <!-- main container-->
 
-<!-- start home.html-->
-<div class="home">
+<!-- start home-head.html-->
+<section class="home-head">
     <div class="container">
-        <div class="home__head">
-            <div class="home__head__text">
+        <div class="home-head__wrap">
+            <div class="home-head__wrap__text">
                 <h1>МОНОКОЛЕСО AIRWHEEL X5</h1>
                 <p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе
                     с друзьями. </p>
                 <h2 class="sale"><span>скидка 20%</span> до 5.12.2016</h2>
                 <a href="#" class="btn-orange">узнать подробнее</a>
             </div>
-            <div class="home__head__img">
+            <div class="home-head__wrap__img">
                 <img src="img/home-page-boy.png" alt="">
             </div>
         </div>
     </div>
-</div>
-<!-- end home.html-->
+</section>
+<!-- end home-head.html-->
 
 <!-- start content.html-->
 
