--- a/app/html/pages/home.html
+++ b/app/html/pages/home.html
@@ -6,6 +6,8 @@
 
 <!-- @@include ../home-head.html -->
 
+<!-- @@include ../home-stock.html -->
+
 <!-- @@include ../content.html -->
 
 <!-- close container-->
