--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -8,6 +8,8 @@
 
 <!-- @@include ../home-stock.html -->
 
+<!-- @@include ../home-how-buy.html -->
+
 <!-- @@include ../content.html -->
 
 <!-- close container-->
