--- a/index.html
+++ b/index.html
@@ -143,12 +143,15 @@
                 <li><img src="img/icons/delivery.png" alt="">
                     <p><span>Гарантия</span><br />по всей России</p>
                 </li>
+                <li class="vertical-line"></li>
                 <li><img src="img/icons/guarantee.png" alt="">
                     <p><span>Бесплатная доставка</span><br />12 месяцев</p>
                 </li>
+                <li class="vertical-line"></li>
                 <li><img src="img/icons/test-drive.png" alt="">
                     <p><span>Тест-драйв</span><br />перед покупкой</p>
                 </li>
+                <li class="vertical-line"></li>
                 <li><img src="img/icons/repair.png" alt="">
                     <p><span>Ремонт</span><br />любой сложности</p>
                 </li>
@@ -156,12 +159,151 @@
         </div>
         <div class="home-stock__content">
             <div class="home-stock__content__left">
+                <div class="block">
+                    <h2><span>до конца акции</span><br />12д 15ч 28м</h2>
+                    <img src="img/mono-wheel.png" alt="">
+                    <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                    <div class="characteristics">
+                        <div class="characteristics__img">
+                            <img src="img/icons/speed.png" alt="">
+                            <p>16 км/ч</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/distance.png" alt="">
+                            <p>25 км</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/diameter.png" alt="">
+                            <p>14“”</p>
+                        </div>
+                    </div>
+                    <p class="old-price">12 500 руб.</p>
+                    <h2 class="new-price">9 999 руб.</h2>
+                    <a href="#" class="btn-orange">в корзину</a>
+                </div>
             </div>
-            <div class="home-stock__content__right"></div>
+            <div class="home-stock__content__right">
+
+                <div class="block">
+                    <img src="img/mono-wheel.png" alt="">
+                    <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                    <div class="characteristics">
+                        <div class="characteristics__img">
+                            <img src="img/icons/speed.png" alt="">
+                            <p>16 км/ч</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/distance.png" alt="">
+                            <p>25 км</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/diameter.png" alt="">
+                            <p>14“”</p>
+                        </div>
+                    </div>
+                    <p class="new-price">12 500 руб.</p>
+                    <a href="#" class="btn-orange">в корзину</a>
+                </div>
+
+                <div class="block">
+                    <img src="img/mono-wheel.png" alt="">
+                    <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                    <div class="characteristics">
+                        <div class="characteristics__img">
+                            <img src="img/icons/speed.png" alt="">
+                            <p>16 км/ч</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/distance.png" alt="">
+                            <p>25 км</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/diameter.png" alt="">
+                            <p>14“”</p>
+                        </div>
+                    </div>
+                    <p class="new-price">12 500 руб.</p>
+                    <a href="#" class="btn-orange">в корзину</a>
+                </div>
+
+                <div class="block">
+                    <img src="img/mono-wheel.png" alt="">
+                    <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                    <div class="characteristics">
+                        <div class="characteristics__img">
+                            <img src="img/icons/speed.png" alt="">
+                            <p>16 км/ч</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/distance.png" alt="">
+                            <p>25 км</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/diameter.png" alt="">
+                            <p>14“”</p>
+                        </div>
+                    </div>
+                    <p class="new-price">12 500 руб.</p>
+                    <a href="#" class="btn-orange">в корзину</a>
+                </div>
+
+                <div class="block">
+                    <img src="img/mono-wheel.png" alt="">
+                    <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                    <div class="characteristics">
+                        <div class="characteristics__img">
+                            <img src="img/icons/speed.png" alt="">
+                            <p>16 км/ч</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/distance.png" alt="">
+                            <p>25 км</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/diameter.png" alt="">
+                            <p>14“”</p>
+                        </div>
+                    </div>
+                    <p class="new-price">12 500 руб.</p>
+                    <a href="#" class="btn-orange">в корзину</a>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
 <!-- end home-stock.html-->
+
+<!-- start home-how-buy.html-->
+<div class="how-buy">
+    <div class="container">
+        <div class="how-buy__text">
+            <h2>КАК КУПИТЬ?</h2>
+            <ol>
+                <li>
+                    <h3>Lorem ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, incidunt.</p>
+                </li>
+                <li>
+                    <h3>Lorem ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, natus.</p>
+                </li>
+                <li>
+                    <h3>Lorem ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, non!</p>
+                </li>
+                <li>
+                    <h3>Lorem ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, officia.</p>
+                </li>
+            </ol>
+        </div>
+        <div class="how-buy__img">
+            <img src="img/sigway.png" alt="">
+        </div>
+    </div>
+</div>
+<!-- end home-how-buy.html-->
 
 <!-- start content.html-->
 
