--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -10,6 +10,8 @@
 
 <!-- @@include ../home-how-buy.html -->
 
+<!-- @@include ../home-reviews.html -->
+
 <!-- @@include ../content.html -->
 
 <!-- close container-->
