--- a/index.html
+++ b/index.html
@@ -305,6 +305,40 @@
 </div>
 <!-- end home-how-buy.html-->
 
+<!-- start home-reviews.html-->
+<div class="reviews">
+    <div class="container">
+        <h2>отзывы</h2>
+        <div class="reviews__slider owl-carousel">
+            <div class="reviews__slider__slide">
+                <div class="reviews__slider__slide__img">
+                    <img src="img/face-man.png" alt=""></div>
+                <div class="reviews__slider__slide__text">
+                    <span><p>Гироскутер Ninebot Mini White1</p></span>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+            <div class="reviews__slider__slide">
+                <div class="reviews__slider__slide__img">
+                    <img src="img/face-man.png" alt=""></div>
+                <div class="reviews__slider__slide__text">
+                    <span><p>Гироскутер Ninebot Mini White2</p></span>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+            <div class="reviews__slider__slide">
+                <div class="reviews__slider__slide__img">
+                    <img src="img/face-man.png" alt=""></div>
+                <div class="reviews__slider__slide__text">
+                    <span><p>Гироскутер Ninebot Mini White3</p></span>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end home-reviews.html-->
+
 <!-- start content.html-->
 
 <!-- @@block  =  content-->
