--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -12,6 +12,8 @@
 
 <!-- @@include ../home-reviews.html -->
 
+<!-- @@include ../home-catalog.html -->
+
 <!-- @@include ../content.html -->
 
 <!-- close container-->
