--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -14,6 +14,8 @@
 
 <!-- @@include ../home-catalog.html -->
 
+<!-- @@include ../home-video.html -->
+
 <!-- @@include ../content.html -->
 
 <!-- close container-->
