--- a/index.html
+++ b/index.html
@@ -508,6 +508,16 @@
 </div>
 <!-- end home-catalog.html-->
 
+<!-- start home-video.html-->
+<div class="video">
+    <div class="container">
+        <div class="video__wrap"><style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//reKGWU6wU7g' frameborder='0' allowfullscreen></iframe></div></div>
+        <div class="video__wrap"><style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//reKGWU6wU7g' frameborder='0' allowfullscreen></iframe></div></div>
+        <div class="video__wrap"><style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//reKGWU6wU7g' frameborder='0' allowfullscreen></iframe></div></div>
+    </div>
+</div>
+<!-- end home-video.html-->
+
 <!-- start content.html-->
 
 <!-- @@block  =  content-->
