--- a/index.html
+++ b/index.html
@@ -167,7 +167,14 @@
         <div class="home-stock__content">
             <div class="home-stock__content__left">
                 <div class="block">
-                    <h2><span>до конца акции</span><br />12д 15ч 28м</h2>
+                    <h2 id="countdown"><span>до конца акции</span><br />
+                        <span class="counter days">12</span>
+                        <span class="counter timeRefDays">д</span>
+                        <span class="counter hours">15</span>
+                        <span class="counter timeRefHours">ч</span>
+                        <span class="counter minutes">28</span>
+                        <span class="counter timeRefMinutes">м</span>
+                    </h2>
                     <img src="img/mono-wheel.png" alt="">
                     <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
                     <div class="characteristics">
@@ -616,6 +623,8 @@
 <script src='js/jquery-ui.min.js' type="text/javascript"></script>
 <script src="js/owl.carousel.min.js" type="text/javascript"></script>
 <script src="js/script.min.js" type="text/javascript"></script>
+<script src="js/countdown.js" type="text/javascript"></script>
+
 </body>
 </html>
 <!-- end html_close.html-->
