--- a/shipping-and-paymen.html
+++ b/shipping-and-paymen.html
@@ -224,6 +224,8 @@
 <script src='js/jquery-ui.min.js' type="text/javascript"></script>
 <script src="js/owl.carousel.min.js" type="text/javascript"></script>
 <script src="js/script.min.js" type="text/javascript"></script>
+<script src="js/countdown.js" type="text/javascript"></script>
+
 </body>
 </html>
 <!-- end html_close.html-->
