--- a/app/html/home-stock.html
+++ b/app/html/home-stock.html
@@ -3,7 +3,14 @@
         <div class="home-stock__content">
             <div class="home-stock__content__left">
                 <div class="block">
-                    <h2><span>до конца акции</span><br />12д 15ч 28м</h2>
+                    <h2 id="countdown"><span>до конца акции</span><br />
+                        <span class="counter days">12</span>
+                        <span class="counter timeRefDays">д</span>
+                        <span class="counter hours">15</span>
+                        <span class="counter timeRefHours">ч</span>
+                        <span class="counter minutes">28</span>
+                        <span class="counter timeRefMinutes">м</span>
+                    </h2>
                     <img src="img/mono-wheel.png" alt="">
                     <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
                     <div class="characteristics">
