--- a/app/html/html_close.html
+++ b/app/html/html_close.html
@@ -2,5 +2,7 @@
 <script src='js/jquery-ui.min.js' type="text/javascript"></script>
 <script src="js/owl.carousel.min.js" type="text/javascript"></script>
 <script src="js/script.min.js" type="text/javascript"></script>
+<script src="js/countdown.js" type="text/javascript"></script>
+
 </body>
 </html>
