add page shipping and payment

--- a/app/html/shipping-and-paymen.html
+++ b/app/html/shipping-and-paymen.html
@@ -1,5 +1,8 @@
 <section class="shipping-and-payment">
     <div class="container">
+        <div class="shipping-and-payment__absolute">
+            <img src="img/shipping-and-paymen/airwheel-absolute.png" alt="">
+        </div>
         <h1 class="shipping-and-payment__title">ДОСТАВКА И ОПЛАТА</h1>
         <div class="shipping-and-payment__warning">
             <h4>Внимание!</h4>
@@ -10,7 +13,45 @@
             </ol>
         </div>
         <div class="shipping-and-payment__delivery">
+            <h2>Доставка по Москве и области</h2>
+            <div class="shipping-and-payment__delivery__text">
+                <p>
+                    Доставка товара по Москве и Подмосковью осуществляется ежедневно с 9:00 до 18:00. По Вашему желанию, доставка может быть осуществлена в другое, удобное для Вас, время и стоимость доставки будет оплачиваться дополнительно.
+                </p>
 
+               <p> В день доставки курьер обязательно предупредит Вас за час до прибытия.</p>
+
+            <p>
+                Все товары перед отгрузкой проходят обязательную техническую проверку. Доставка осуществляется на следующий день после готовности товара к отгрузке.*
+            </p>
+
+              <p>
+                  *Срок доставки может быть изменен в зависимости от наличия товара на складе, о чем покупатель обязательно уведомляется при оформлении заказа.
+              </p>
+            </div>
+            <div class="shipping-and-payment__delivery__table">
+                <table>
+                    <thead>
+                    <tr>
+                        <td>Способ доставки</td>
+                        <td>внутри МКАД</td>
+                        <td>за МКАД</td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Обычная (в течение дня)</td>
+                        <td>Бесплатно</td>
+                        <td> 30 руб./км</td>
+                    </tr>
+                    <tr>
+                        <td>Аксессуары (отдельно)</td>
+                        <td>300 руб.</td>
+                        <td>300 + 30 руб/км</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </section>
