--- a/app/html/header.html
+++ b/app/html/header.html
@@ -14,7 +14,7 @@
             </div>
             <div class="header__top__nav">
                 <ul>
-                    <li><a href="#">Доставка и оплата</a></li>
+                    <li><a href="shipping-and-paymen.html">Доставка и оплата</a></li>
                     <li>/</li>
                     <li><a href="#">ремонт</a></li>
                     <li>/</li>
