--- a/app/html/pages/shipping-and-paymen.html
+++ b/app/html/pages/shipping-and-paymen.html
@@ -4,7 +4,13 @@
 
 <!-- @@include ../home-head.html -->
 
+<!-- @@include ../services.html -->
+
 <!-- @@include ../shipping-and-paymen.html -->
+
+<!-- @@include ../shipping-order.html -->
+
+<!-- @@include ../shipping-payment.html -->
 
 <!-- close container-->
 
