--- a/shipping-and-paymen.html
+++ b/shipping-and-paymen.html
@@ -32,7 +32,7 @@
             </div>
             <div class="header__top__nav">
                 <ul>
-                    <li><a href="#">Доставка и оплата</a></li>
+                    <li><a href="shipping-and-paymen.html">Доставка и оплата</a></li>
                     <li>/</li>
                     <li><a href="#">ремонт</a></li>
                     <li>/</li>
@@ -135,9 +135,38 @@
 </section>
 <!-- end home-head.html-->
 
+<!-- start services.html-->
+<div class="home-stock">
+    <div class="container">
+        <div class="home-stock__head">
+        <ul>
+            <li><img src="img/icons/delivery.png" alt="">
+                <p><span>Гарантия</span><br />по всей России</p>
+            </li>
+            <li class="vertical-line"></li>
+            <li><img src="img/icons/guarantee.png" alt="">
+                <p><span>Бесплатная доставка</span><br />12 месяцев</p>
+            </li>
+            <li class="vertical-line"></li>
+            <li><img src="img/icons/test-drive.png" alt="">
+                <p><span>Тест-драйв</span><br />перед покупкой</p>
+            </li>
+            <li class="vertical-line"></li>
+            <li><img src="img/icons/repair.png" alt="">
+                <p><span>Ремонт</span><br />любой сложности</p>
+            </li>
+        </ul>
+    </div>
+    </div>
+</div>
+<!-- end services.html-->
+
 <!-- start shipping-and-paymen.html-->
 <section class="shipping-and-payment">
     <div class="container">
+        <div class="shipping-and-payment__absolute">
+            <img src="img/shipping-and-paymen/airwheel-absolute.png" alt="">
+        </div>
         <h1 class="shipping-and-payment__title">ДОСТАВКА И ОПЛАТА</h1>
         <div class="shipping-and-payment__warning">
             <h4>Внимание!</h4>
@@ -148,11 +177,124 @@
             </ol>
         </div>
         <div class="shipping-and-payment__delivery">
+            <h2>Доставка по Москве и области</h2>
+            <div class="shipping-and-payment__delivery__text">
+                <p>
+                    Доставка товара по Москве и Подмосковью осуществляется ежедневно с 9:00 до 18:00. По Вашему желанию, доставка может быть осуществлена в другое, удобное для Вас, время и стоимость доставки будет оплачиваться дополнительно.
+                </p>
 
+               <p> В день доставки курьер обязательно предупредит Вас за час до прибытия.</p>
+
+            <p>
+                Все товары перед отгрузкой проходят обязательную техническую проверку. Доставка осуществляется на следующий день после готовности товара к отгрузке.*
+            </p>
+
+              <p>
+                  *Срок доставки может быть изменен в зависимости от наличия товара на складе, о чем покупатель обязательно уведомляется при оформлении заказа.
+              </p>
+            </div>
+            <div class="shipping-and-payment__delivery__table">
+                <table>
+                    <thead>
+                    <tr>
+                        <td>Способ доставки</td>
+                        <td>внутри МКАД</td>
+                        <td>за МКАД</td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Обычная (в течение дня)</td>
+                        <td>Бесплатно</td>
+                        <td> 30 руб./км</td>
+                    </tr>
+                    <tr>
+                        <td>Аксессуары (отдельно)</td>
+                        <td>300 руб.</td>
+                        <td>300 + 30 руб/км</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </section>
 <!-- end shipping-and-paymen.html-->
+
+<!-- start shipping-order.html-->
+<section class="shipping-order">
+    <div class="container">
+        <div class="shipping-order__title">
+            <h1>Заказ</h1>
+        </div>
+        <div class="shipping-order__text">
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+        </div>
+    </div>
+</section>
+<!-- end shipping-order.html-->
+
+<!-- start shipping-payment.html-->
+<section class="shipping-payment">
+    <div class="container">
+        <div class="shipping-payment__title">
+            <h1>ОПЛАТА</h1>
+            <h2>
+                Комфортный выбор и разнообразие вариантов оплаты продукции – одно из условий безопасной, быстрой и
+                необременительной покупки. Понимая это, мы обеспечили для своих клиентов все возможности для такого
+                выбора.
+            </h2>
+        </div>
+        <div class="shipping-payment__content">
+            <div class="shipping-payment__content__absolute">
+                <img src="img/shipping-and-paymen/absolute-payment.png" alt="">
+            </div>
+            <div class="shipping-payment__content__text">
+                <h3>Как резидент РФ, Вы можете оплатить товар:</h3>
+                <ul>
+                    <li>Перечислив средства на карту Visa, Master-Card через интернет-банкинг.</li>
+                    <li>Внеся наличные по платежным реквизитам Visa, Master-Card через терминал пополнения.</li>
+                    <li>Оплатить заказ наложенным платежом по факту получения в транспортных компаниях.</li>
+                    <li>Банковским переводом на расчетный счет.</li>
+                    <li>Наличными в офисе компании или при получении курьером.</li>
+                </ul>
+                <h3>Как нерезидент РФ, Вы можете оплатить товар:</h3>
+                <ul>
+                    <li>Денежным переводом по системе Western Union (www.westernunion.ru)</li>
+                    <li>Денежным переводом по системе "Золотая корона" (www.perevod-korona.com)</li>
+                    <li>Другим удобным вам и предварительно согласованным с компанией способом.</li>
+                </ul>
+                <h3>Счет на оплату вы можете получить у менеджера при оформлении заказа.</h3>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end shipping-payment.html-->
 
 <!-- close container-->
 
