finish page 'shipping and payment' for desktop

--- a/app/html/pages/shipping-and-paymen.html
+++ b/app/html/pages/shipping-and-paymen.html
@@ -12,6 +12,8 @@
 
 <!-- @@include ../shipping-payment.html -->
 
+<!-- @@include ../shipping-delivery.html -->
+
 <!-- close container-->
 
 <!-- @@include ../footer.html -->
