--- a/shipping-and-paymen.html
+++ b/shipping-and-paymen.html
@@ -296,6 +296,59 @@
 </section>
 <!-- end shipping-payment.html-->
 
+<!-- start shipping-delivery.html-->
+<section class="shipping-delivery">
+    <div class="container">
+        <div class="shipping-delivery__title">
+            <h1>Доставка</h1>
+        </div>
+        <div class="shipping-delivery__content">
+            <div class="shipping-delivery__content__item">
+                <h2>Доставка на дом по России</h2>
+                <p>
+                    Продукция доставляется в любой регион России до дверей покупателя или до склада транспортной
+                    компании
+                    за 1-2 дня, а также специализированными службой доставки: …и другими удобными вам способами.
+                    Стоимость доставки оплачивается покупателем.
+                </p>
+            </div>
+            <div class="shipping-delivery__content__item">
+                <h2>Доставка в пределах Москвы</h2>
+                <p>
+                    Продукция поставляется по Москве бесплатно в течение 1-3 дней с момента заказа в случае, если сумма
+                    заказа превысила … . При покупке на меньшую сумму оплата доставки во все районы города за
+                    исключением … составит … . Условия срочной доставки оговариваются отдельно.
+                </p>
+            </div>
+            <div class="shipping-delivery__content__item">
+                <h2>Междкнародная доставка</h2>
+                <p>
+                    Любой товар, представленный в нашем интернет-магазине электротранспорта может быть отправлен за
+                    границу, как правило, через государственную или международные компании, осуществляющие
+                    экспресс-перевозки: «EMS» «DHL», «TNT» «FEDEX».
+                </p>
+                <p>
+                    При наличии канала прямого наземного транспортного сообщения между пунктом доставки и Москвой
+                    (автобус, поезд), возможна отправка товара этим способом. Стоимость доставки оплачивается
+                    покупателем.
+                </p>
+            </div>
+            <div class="shipping-delivery__content__item">
+                <h2>Стоимость доставки</h2>
+                <p>
+                    Точную стоимость доставки рассчитает наш менеджер, согласовав с покупателем:
+                </p>
+                <ol>
+                    <li>Какой именно товар он планирует приобрести.</li>
+                    <li>Услугами какой транспортной компании он планирует воспользоваться.</li>
+                    <li> В какой пункт назначения предстоит отправить товар.</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end shipping-delivery.html-->
+
 <!-- close container-->
 
 <!-- start footer.html-->
