--- a/shipping-and-paymen.html
+++ b/shipping-and-paymen.html
@@ -34,7 +34,7 @@
                 <ul>
                     <li><a href="shipping-and-paymen.html">Доставка и оплата</a></li>
                     <li>/</li>
-                    <li><a href="#">ремонт</a></li>
+                    <li><a href="repairs.html">ремонт</a></li>
                     <li>/</li>
                     <li><a href="#">отзывы</a></li>
                     <li>/</li>
