add responsive for head

--- a/app/html/header.html
+++ b/app/html/header.html
@@ -33,8 +33,10 @@
                 </form>
             </div>
             <div class="header__middle__callback">
-                <p>+7 757 287 78 78</p>
-                <p>+8 835 698 78 85</p>
+                <div class="phone-number">
+                    <p>+7 757 287 78 78</p>
+                    <p>+8 835 698 78 85</p>
+                </div>
                 <a class="btn-orange" href="#">обратный звонок</a>
             </div>
         </div>
@@ -46,11 +48,65 @@
                             <span></span><span></span>
                         </a>
                         <ul class="sub-menu">
-                            <li><a href="#">Category-1</a></li>
-                            <li><a href="#">Category-2</a></li>
-                            <li><a href="#">Category-3</a></li>
-                            <li><a href="#">Category-4</a></li>
-                            <li><a href="#">Category-5</a></li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Гироскутеры</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                                <ul>
+                                    <li><a href="#">Гироскутеры Airwheel</a></li>
+                                    <li><a href="#">Гироскутеры EcoDrift</a></li>
+                                    <li><a href="#">Гироскутеры EcoDrifter</a></li>
+                                    <li><a href="#">Гироскутеры Ruswheel</a></li>
+                                    <li><a href="#">Гироскутеры Smart Balance</a></li>
+                                    <li><a href="#">Гироскутеры Solowheel</a></li>
+                                    <li><a href="#">Гироскутеры Solowheel</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Моноколеса</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Сигвей</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электросамокаты</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt=""></li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электровелосипеды</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электроскейтборды</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электроскутеры</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электромотоциклы</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электроквадроциклы</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Запчасти</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+
                         </ul>
                     </li>
                     <li class="drop">
@@ -89,6 +145,87 @@
                             <li><a href="#">Category-5</a></li>
                         </ul>
                     </li>
+                </ul>
+            </div>
+            <div class="header__bottom__nav-mobile">
+                <div class="menu-line">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <a class="menu-btn" href="#">МЕНЮ</a>
+                <ul class="menu-mob">
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Гироскутеры</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                        <ul class="menu-mob__list-submenu">
+                            <li><a href="#">Гироскутеры Airwheel</a></li>
+                            <li><a href="#">Гироскутеры EcoDrift</a></li>
+                            <li><a href="#">Гироскутеры EcoDrifter</a></li>
+                            <li><a href="#">Гироскутеры Ruswheel</a></li>
+                            <li><a href="#">Гироскутеры Smart Balance</a></li>
+                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Моноколеса</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                        <ul class="menu-mob__list-submenu">
+                            <li><a href="#">Гироскутеры Airwheel</a></li>
+                            <li><a href="#">Гироскутеры EcoDrift</a></li>
+                            <li><a href="#">Гироскутеры EcoDrifter</a></li>
+                            <li><a href="#">Гироскутеры Ruswheel</a></li>
+                            <li><a href="#">Гироскутеры Smart Balance</a></li>
+                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Сигвей</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электросамокаты</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt=""></li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электровелосипеды</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электроскейтборды</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электроскутеры</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электромотоциклы</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электроквадроциклы</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Запчасти</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li><a href="#">ОСТАВКА И ОПЛАТА</a></li>
+                    <li><a href="#">РЕМОНТ</a></li>
+                    <li><a href="#">ОТЗЫВЫ</a></li>
+                    <li><a href="#">КОНТАКТЫ</a></li>
                 </ul>
             </div>
         </div>
