add page contacts for desktop

--- a/contacts.html
+++ b/contacts.html
@@ -116,134 +116,51 @@
 
 <!-- end header.html-->
 
-<!-- start home-head.html-->
-<section class="home-head">
+<!-- start contacts.html-->
+<section class="contacts">
     <div class="container">
-        <div class="home-head__wrap">
-            <div class="home-head__wrap__text">
-                <h1>МОНОКОЛЕСО AIRWHEEL X5</h1>
-                <p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе
-                    с друзьями. </p>
-                <h2 class="sale"><span>скидка 20%</span> до 5.12.2016</h2>
-                <a href="#" class="btn-orange">узнать подробнее</a>
+        <div class="contacts__form">
+            <h1>контакты</h1>
+            <form action="#">
+                <input type="text" name="name" placeholder="Ваше Имя:" required>
+                <input type="email" name="email" placeholder="Ваш e-mail:" required>
+                <input type="tel" name="phone" placeholder="Ваш телефон:" required>
+                <textarea placeholder="Ваш вопрос:" required></textarea>
+                <button type="submit">отправить</button>
+            </form>
+        </div>
+        <div class="contacts__text">
+            <h4>Отдел продаж:</h4>
+            <div class="contacts__text__contact">
+                <span>+7 757 287 78 78</span>
+                <span>Skype: Dadoo.ru</span>
+                <span>Mail: info@dadoo.ru</span>
             </div>
-            <div class="home-head__wrap__img">
-                <img src="img/home-page-boy.png" alt="">
+        </div>
+        <div class="contacts__text">
+            <h3>Время работы:</h3>
+            <div class="contacts__text__contact">
+                <span>Менеджеры на телефоне: с 9-00 до 22-00</span>
+                <span>БЕЗ ВЫХОДНЫХ</span>
+                <span>Прием заказов через сайт: круглосуточно<</span>
             </div>
+        </div>
+        <div class="contacts__text">
+            <div class="contacts__text__contact">
+                <span>ООО Даду </span>
+                <span>ИНН 00000000000000</span>
+                <span>ОГРНИП 000000000000</span>
+                <span>ОГРНИП 000000000000</span>
+                <span>Юридический адрес: Московская обл. г.Ваг Город ул.Ваша 40 кв. 0000</span>
+                <span>Наш адрес: г.Москва, Ваша улица пер., 00 стр.0</span>
+            </div>
+        </div>
+        <div class="contacts__map">
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A944ce8bf797429b32f07b37d5aec1827a484043268ce87a196e7390cc5501dcb&amp;width=100%25&amp;height=400&amp;lang=ru_UA&amp;scroll=true"></script>
         </div>
     </div>
 </section>
-<!-- end home-head.html-->
-
-<!-- start services.html-->
-<div class="home-stock">
-    <div class="container">
-        <div class="home-stock__head">
-        <ul>
-            <li><img src="img/icons/delivery.png" alt="">
-                <p><span>Гарантия</span><br />по всей России</p>
-            </li>
-            <li class="vertical-line"></li>
-            <li><img src="img/icons/guarantee.png" alt="">
-                <p><span>Бесплатная доставка</span><br />12 месяцев</p>
-            </li>
-            <li class="vertical-line"></li>
-            <li><img src="img/icons/test-drive.png" alt="">
-                <p><span>Тест-драйв</span><br />перед покупкой</p>
-            </li>
-            <li class="vertical-line"></li>
-            <li><img src="img/icons/repair.png" alt="">
-                <p><span>Ремонт</span><br />любой сложности</p>
-            </li>
-        </ul>
-    </div>
-    </div>
-</div>
-<!-- end services.html-->
-
-<!-- start repairs-services.html-->
-<section class="repairs-services">
-    <div class="container">
-        <div class="repairs-services__title">
-            <h1>Ремонт</h1>
-        </div>
-        <div class="repairs-services__content">
-            <div class="repairs-services__content__text">
-                <h2>Сервисный центр</h2>
-                <p>Электротранспорт – это техника будущего! Существует множество его видов, предназначенных для самых
-                    разных целей. Электротранспорт обладает множеством достоинств, начиная от экологичности, и
-                    заканчивая высокой функциональностью.</p>
-                <p>
-                    Однако, как и вся техника, он может выйти из строя. Причины бывают самые разные. В этом случае
-                    необходим ремонт электротранспорта. Мы предлагаем все, что может понадобиться для ремонтных работ.
-                    Все детали и запасные части представлены от проверенных производителей, которые отвечают за качество
-                    своего товара..
-                </p>
-            </div>
-            <div class="repairs-services__content__img">
-                <img src="img/repairs/img1.png" alt="">
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end repairs-services.html-->
-
-<!-- start repair-shop.html-->
-<section class="repair-shop">
-    <div class="container">
-        <div class="repair-shop__content">
-            <div class="repair-shop__content__img">
-                <img src="img/repairs/img2.jpg" alt="">
-            </div>
-            <div class="repair-shop__content__text">
-                <h3>РЕМОНТНАЯ МАСТЕРСКАЯ</h3>
-                <p>
-                    Независимо от того, какие работы нужно выполнить, будь то ремонт электро двигателей, или что-либо
-                    другое, у нас можно найти все! Качество деталей и запасных частей подтверждается нами
-                    соответствующими сертификатами.
-                </p>
-                <p>
-                    Мы ценим каждого покупателя и предлагаем только высококачественные комплектующие, которые будут
-                    служить долго и бесперебойно.
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end repair-shop.html-->
-
-<!-- start repair-warranty-service.html-->
-<section class="warranty-service">
-    <div class="container">
-        <div class="warranty-service__content">
-            <div class="warranty-service__content__text">
-                <h1>ГАРАНТИЙНОЕ И ПОСЛЕГАРАНТИЙНОЕ ОБСЛУЖИВАНИЕ</h1>
-                <ul>
-                    <li>
-                        Ремонт гироскутеров осуществляется
-                        в нашем сервисном центре, расположенном возле м. Спортивная.
-                    </li>
-                    <li>
-                        Ремонт осуществляют только высококвалифицированные
-                        и аттестованные специалисты.
-                    </li>
-                    <li>
-                        Мы обладаем богатым опытом в сфере ремонта индивидуального электротранспорта, как на блочном,
-                        так и на компонентном уровне.
-                    </li>
-                    <li>
-                        Выполняем ремонт любой сложности
-                        в кратчайшие сроки.
-                    </li>
-                </ul>
-            </div>
-            <div class="warranty-service__content__img">
-                <img src="img/repairs/img3.png" alt="">
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end repair-warranty-service.html-->
+<!-- end contacts.html-->
 
 <!-- start footer.html-->
 <footer class="footer">
