--- a/app/html/header.html
+++ b/app/html/header.html
@@ -20,7 +20,7 @@
                     <li>/</li>
                     <li><a href="reviews.html">отзывы</a></li>
                     <li>/</li>
-                    <li><a href="#">контакты</a></li>
+                    <li><a href="contacts.html">контакты</a></li>
                 </ul>
             </div>
         </div>
