--- a/reviews.html
+++ b/reviews.html
@@ -38,7 +38,7 @@
                     <li>/</li>
                     <li><a href="reviews.html">отзывы</a></li>
                     <li>/</li>
-                    <li><a href="#">контакты</a></li>
+                    <li><a href="contacts.html">контакты</a></li>
                 </ul>
             </div>
         </div>
