add responsive for home page

--- a/app/html/home-catalog.html
+++ b/app/html/home-catalog.html
@@ -81,7 +81,7 @@
                 <p class="new-price">12 500 руб.</p>
                 <a href="#" class="btn-orange">в корзину</a>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
                 <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
                 <div class="characteristics">
@@ -101,7 +101,7 @@
                 <p class="new-price">12 500 руб.</p>
                 <a href="#" class="btn-orange">в корзину</a>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
                 <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
                 <div class="characteristics">
@@ -121,7 +121,7 @@
                 <p class="new-price">12 500 руб.</p>
                 <a href="#" class="btn-orange">в корзину</a>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
                 <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
                 <div class="characteristics">
@@ -141,7 +141,7 @@
                 <p class="new-price">12 500 руб.</p>
                 <a href="#" class="btn-orange">в корзину</a>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
                 <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
                 <div class="characteristics">
