--- a/app/html/services.html
+++ b/app/html/services.html
@@ -3,11 +3,11 @@
         <div class="home-stock__head">
         <ul>
             <li><img src="img/icons/delivery.png" alt="">
-                <p><span>Гарантия</span><br />по всей России</p>
+                <p><span>Бесплатная доставка</span><br />по всей России</p>
             </li>
             <li class="vertical-line"></li>
             <li><img src="img/icons/guarantee.png" alt="">
-                <p><span>Бесплатная доставка</span><br />12 месяцев</p>
+                <p><span>Гарантия</span><br />12 месяцев</p>
             </li>
             <li class="vertical-line"></li>
             <li><img src="img/icons/test-drive.png" alt="">
