--- a/shipping-and-paymen.html
+++ b/shipping-and-paymen.html
@@ -278,11 +278,11 @@
         <div class="home-stock__head">
         <ul>
             <li><img src="img/icons/delivery.png" alt="">
-                <p><span>Гарантия</span><br />по всей России</p>
+                <p><span>Бесплатная доставка</span><br />по всей России</p>
             </li>
             <li class="vertical-line"></li>
             <li><img src="img/icons/guarantee.png" alt="">
-                <p><span>Бесплатная доставка</span><br />12 месяцев</p>
+                <p><span>Гарантия</span><br />12 месяцев</p>
             </li>
             <li class="vertical-line"></li>
             <li><img src="img/icons/test-drive.png" alt="">
@@ -493,18 +493,22 @@
     <div class="container">
         <div class="footer__top">
             <div class="footer__top__logo">
-                <img src="img/logo.png" alt="">
+                <img src="img/logo-footer.png" alt="">
             </div>
             <div class="footer__top__payment">
                 <p>способы оплаты:</p>
-                <img src="img/icons/sberbank.png" alt="">
-                <img src="img/icons/visa.png" alt="">
-                <img src="img/icons/wm.png" alt="">
-                <img src="img/icons/yandex-money.png" alt="">
+                <div>
+                    <img src="img/icons/sberbank.png" alt="">
+                    <img src="img/icons/visa.png" alt="">
+                    <img src="img/icons/wm.png" alt="">
+                    <img src="img/icons/yandex-money.png" alt="">
+                </div>
             </div>
             <div class="footer__top__contacts">
-                <p>+7 757 287 78 78</p>
-                <p>+8 835 698 78 85</p>
+                <div>
+                    <p>+7 757 287 78 78</p>
+                    <p>+8 835 698 78 85</p>
+                </div>
                 <a class="btn-orange" href="#">обратный звонок</a>
             </div>
         </div>
@@ -527,7 +531,7 @@
                     <li><a href="#">Электроскутеры</a></li>
                 </ul>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <ul>
                     <li><a href="#">Электромотоциклы</a></li>
                     <li><a href="#">Инвалидные каляски на электротяге</a></li>
@@ -536,7 +540,7 @@
                     <li><a href="#">Электроквадрациклы</a></li>
                 </ul>
             </div>
-            <div class="block">
+            <div class="block for-middle">
                 <ul>
                     <li><a href="#">Электроскейты</a></li>
                     <li><a href="#">Электрокары</a></li>
@@ -546,7 +550,7 @@
                     <li><a href="#">Производители</a></li>
                 </ul>
             </div>
-            <div class="block">
+            <div class="block for-middle">
                 <ul>
                     <li><a href="#">Запчасти</a></li>
                     <li><a href="#">Аксесуары</a></li>
@@ -558,8 +562,15 @@
                 </ul>
             </div>
         </div>
+        <p class="footer-paragraph"><a href="#">Dadoo.ru</a> &copy; 2017</p>
     </div>
 </footer>
+
+<div class="modal">
+    <div class="basket"><img src="img/icons/basket.png" alt=""><span></span></div>
+    <p>В вашей корзине 1 товар <span>на сумму 9800 руб.</span></p>
+    <a href="#" class="btn-orange">оформить заказ</a>
+</div>
 <!-- end footer.html-->
 
 <!-- start html_close.html-->
