--- a/index.html
+++ b/index.html
@@ -280,11 +280,11 @@
         <div class="home-stock__head">
         <ul>
             <li><img src="img/icons/delivery.png" alt="">
-                <p><span>Гарантия</span><br />по всей России</p>
+                <p><span>Бесплатная доставка</span><br />по всей России</p>
             </li>
             <li class="vertical-line"></li>
             <li><img src="img/icons/guarantee.png" alt="">
-                <p><span>Бесплатная доставка</span><br />12 месяцев</p>
+                <p><span>Гарантия</span><br />12 месяцев</p>
             </li>
             <li class="vertical-line"></li>
             <li><img src="img/icons/test-drive.png" alt="">
@@ -604,7 +604,7 @@
                 <p class="new-price">12 500 руб.</p>
                 <a href="#" class="btn-orange">в корзину</a>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
                 <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
                 <div class="characteristics">
@@ -624,7 +624,7 @@
                 <p class="new-price">12 500 руб.</p>
                 <a href="#" class="btn-orange">в корзину</a>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
                 <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
                 <div class="characteristics">
@@ -644,7 +644,7 @@
                 <p class="new-price">12 500 руб.</p>
                 <a href="#" class="btn-orange">в корзину</a>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
                 <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
                 <div class="characteristics">
@@ -664,7 +664,7 @@
                 <p class="new-price">12 500 руб.</p>
                 <a href="#" class="btn-orange">в корзину</a>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
                 <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
                 <div class="characteristics">
@@ -706,18 +706,22 @@
     <div class="container">
         <div class="footer__top">
             <div class="footer__top__logo">
-                <img src="img/logo.png" alt="">
+                <img src="img/logo-footer.png" alt="">
             </div>
             <div class="footer__top__payment">
                 <p>способы оплаты:</p>
-                <img src="img/icons/sberbank.png" alt="">
-                <img src="img/icons/visa.png" alt="">
-                <img src="img/icons/wm.png" alt="">
-                <img src="img/icons/yandex-money.png" alt="">
+                <div>
+                    <img src="img/icons/sberbank.png" alt="">
+                    <img src="img/icons/visa.png" alt="">
+                    <img src="img/icons/wm.png" alt="">
+                    <img src="img/icons/yandex-money.png" alt="">
+                </div>
             </div>
             <div class="footer__top__contacts">
-                <p>+7 757 287 78 78</p>
-                <p>+8 835 698 78 85</p>
+                <div>
+                    <p>+7 757 287 78 78</p>
+                    <p>+8 835 698 78 85</p>
+                </div>
                 <a class="btn-orange" href="#">обратный звонок</a>
             </div>
         </div>
@@ -740,7 +744,7 @@
                     <li><a href="#">Электроскутеры</a></li>
                 </ul>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <ul>
                     <li><a href="#">Электромотоциклы</a></li>
                     <li><a href="#">Инвалидные каляски на электротяге</a></li>
@@ -749,7 +753,7 @@
                     <li><a href="#">Электроквадрациклы</a></li>
                 </ul>
             </div>
-            <div class="block">
+            <div class="block for-middle">
                 <ul>
                     <li><a href="#">Электроскейты</a></li>
                     <li><a href="#">Электрокары</a></li>
@@ -759,7 +763,7 @@
                     <li><a href="#">Производители</a></li>
                 </ul>
             </div>
-            <div class="block">
+            <div class="block for-middle">
                 <ul>
                     <li><a href="#">Запчасти</a></li>
                     <li><a href="#">Аксесуары</a></li>
@@ -771,8 +775,15 @@
                 </ul>
             </div>
         </div>
+        <p class="footer-paragraph"><a href="#">Dadoo.ru</a> &copy; 2017</p>
     </div>
 </footer>
+
+<div class="modal">
+    <div class="basket"><img src="img/icons/basket.png" alt=""><span></span></div>
+    <p>В вашей корзине 1 товар <span>на сумму 9800 руб.</span></p>
+    <a href="#" class="btn-orange">оформить заказ</a>
+</div>
 <!-- end footer.html-->
 
 <!-- start html_close.html-->
